# lingui-for

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  build-wasm.ts  generate-artifacts.ts  macros.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
crates/astro-analyzer/: Cargo.toml  README.md
crates/astro-analyzer/src/: alloc.rs  analyze.rs  lib.rs  parse.rs
crates/astro-analyzer/tests/: analysis.rs
crates/lingui-analyzer/: Cargo.toml  README.md
crates/lingui-analyzer/benches/: pipeline.rs  stage_transforms.rs
crates/lingui-analyzer/benches/fixtures/: astro-full.astro  astro-full.astro.extract.messages.json  astro-full.astro.transform.context.tsx  astro-full.astro.transform.context.tsx.map  astro-full.astro.transform.contextual.tsx  astro-full.astro.transform.contextual.tsx.map  astro-full.astro.transform.final.astro  astro-full.astro.transform.final.astro.map  astro-full.astro.transform.synthetic.tsx  astro-full.astro.transform.synthetic.tsx.map  astro-unicode.astro  astro-unicode.astro.extract.messages.json  astro-unicode.astro.transform.context.tsx  astro-unicode.astro.transform.context.tsx.map  astro-unicode.astro.transform.contextual.tsx  astro-unicode.astro.transform.contextual.tsx.map  astro-unicode.astro.transform.final.astro  astro-unicode.astro.transform.final.astro.map  astro-unicode.astro.transform.synthetic.tsx  astro-unicode.astro.transform.synthetic.tsx.map  svelte-full.svelte  svelte-full.svelte.extract.messages.json  svelte-full.svelte.transform.context.tsx.map  svelte-full.svelte.transform.contextual.tsx  svelte-full.svelte.transform.raw.tsx  (+22 more)
crates/lingui-analyzer/examples/: astro_html_ir.rs
crates/lingui-analyzer/src/: compile_emit.rs  compile_plan.rs  component_lowering.rs  conventions.rs  error.rs  finish_compile.rs  js.rs  lib.rs  model.rs  parse.rs  reinsert.rs  scope.rs  synthetic.rs  utf16.rs  validation.rs
crates/lingui-analyzer/tests/: astro_frontmatter.rs  astro_trans_capabilities.rs  compile_plan.rs  svelte_script.rs  svelte_trans_capabilities.rs  synthetic_module.rs  transform_plan.rs
(+572 files in other folders)
