[package]
name = "astro-analyzer"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-astro = { path = "../../../tree-sitter-astro" }
wasm-bindgen = "0.2"

[dev-dependencies]
indoc = "2"
