[package]
name = "lingui-analyzer"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-astro = { git = "https://github.com/SegaraRai/tree-sitter-astro.git" }
tree-sitter-javascript = "0.25"

[dev-dependencies]
indoc = "2"
